# open-finance-mx-prototype

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
src/: main.py
src/api/: belvo_client.py
