[project]
name = "open-finance-mx-prototype"
version = "0.1.0"
description = "Prototype: Open Finance MX using Belvo Sandbox"
requires-python = ">=3.10"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203","W503"]
select = ["C","E","F","W","B"]
exclude = [".venv",".git","dist","build","__pycache__"]

[tool.mypy]
python_version = "3.11"
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
pretty = true
ignore_missing_imports = true
strict_optional = false
